--- a/app/src/main/res/layout/activity_admin_interface2.xml
+++ b/app/src/main/res/layout/activity_admin_interface2.xml
@@ -29,48 +29,46 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView11" />
 
     <Button
-        android:id="@+id/btn_Delete_Work"
+        android:id="@+id/btn_Change_user"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="36dp"
         android:text="Change User"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Delete_User"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_Delete_User"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Delete_User" />
+
+    <Button
+        android:id="@+id/Change_WORK"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="140dp"
+        android:text="Change Work"
         app:layout_constraintEnd_toEndOf="@+id/btn_Delete_User"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Delete_User"
         app:layout_constraintTop_toBottomOf="@+id/btn_Delete_User" />
 
     <Button
-        android:id="@+id/Interface3"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="28dp"
-        android:text="Edit Text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_Delete_Work"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/btn_Delete_Work"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Delete_Work"
-        app:layout_constraintVertical_bias="0.007" />
-
-    <Button
         android:id="@+id/Interface2"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="360dp"
         android:text="Interface 1"
-        app:layout_constraintEnd_toEndOf="@+id/Interface3"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Delete_User"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/Interface3"
-        app:layout_constraintTop_toBottomOf="@+id/Interface3" />
+        app:layout_constraintStart_toStartOf="@+id/btn_Delete_User"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Delete_User" />
 
     <Button
         android:id="@+id/EditWork"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="252dp"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/Interface3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/Interface3"
-        app:layout_constraintTop_toBottomOf="@+id/Interface3" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_Delete_User"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_Delete_User"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Delete_User" />
 </androidx.constraintlayout.widget.ConstraintLayout>
