--- a/app/src/main/res/layout/activity_admin_interface2.xml
+++ b/app/src/main/res/layout/activity_admin_interface2.xml
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginTop="252dp"
-        android:text="Button"
+        android:text="Comming soon"
         app:layout_constraintEnd_toEndOf="@+id/btn_Delete_User"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_Delete_User"
