--- a/app/src/main/res/layout/activity_admin_delete_user.xml
+++ b/app/src/main/res/layout/activity_admin_delete_user.xml
@@ -9,7 +9,6 @@
     tools:context=".Admin.Admin_Delete_USER">
 
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -28,19 +27,15 @@
         </LinearLayout>
     </ScrollView>
 
-
-
-
-
-
     <HorizontalScrollView
-        android:layout_marginLeft="150dp"
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_width="639dp"
+        android:layout_height="123dp"
+        android:layout_marginLeft="150dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
                 android:id="@+id/btnGetAllWORKS"
                 android:layout_width="150dp"
@@ -53,8 +48,8 @@
 
             <Button
                 android:id="@+id/btn_Get_ALLUSERS"
-                android:layout_width="150dp"
-                android:layout_height="70dp"
+                android:layout_width="144dp"
+                android:layout_height="67dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="20dp"
                 android:background="#400000"
@@ -63,7 +58,6 @@
 
         </LinearLayout>
     </HorizontalScrollView>
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -82,12 +76,6 @@
                 android:text="" />
         </LinearLayout>
     </ScrollView>
-
-
-
-
-
-
 
     <HorizontalScrollView
         android:layout_marginLeft="200dp"
