--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -6,4 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".Admin.AddBill">
 
+<TextView
+    android:id="@+id/tv_Title_AddBill"
+    android:text="Title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textStyle="bold"
+    android:textSize="24sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+
+    />
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
