--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".Admin.Start">
 
+    <LinearLayout
+        android:layout_width="804dp"
+        android:layout_height="129dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="-4dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
+            android:drawableTop="@drawable/ic_baseline_business_center_24"
+            android:text="Business"
+            android:textColor="@color/black"
+            tools:layout_editor_absoluteX="502dp"
+            tools:layout_editor_absoluteY="80dp" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
+            android:drawableTop="@drawable/ic_baseline_business_center_24"
+            android:text="Private"
+            android:textColor="@color/black"
+            tools:layout_editor_absoluteX="207dp"
+            tools:layout_editor_absoluteY="80dp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
