--- a/app/src/main/res/layout/activity_admin_delete_user.xml
+++ b/app/src/main/res/layout/activity_admin_delete_user.xml
@@ -9,6 +9,7 @@
     tools:context=".Admin.Admin_Delete_USER">
 
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -28,15 +29,18 @@
     </ScrollView>
 
 
+
+
+
+
     <HorizontalScrollView
-        android:layout_width="558dp"
-        android:layout_height="101dp"
-        android:layout_marginLeft="150dp">
+        android:layout_marginLeft="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <Button
                 android:id="@+id/btnGetAllWORKS"
                 android:layout_width="150dp"
@@ -59,6 +63,7 @@
 
         </LinearLayout>
     </HorizontalScrollView>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -117,10 +122,14 @@
     </HorizontalScrollView>
 
 
+
+
+
+
     <HorizontalScrollView
+        android:layout_marginLeft="150dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginLeft="150dp">
+        android:layout_height="100dp">
 
         <LinearLayout
             android:layout_width="match_parent"
