--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,4 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".Admin.Start">
 
+    <LinearLayout
+        android:layout_width="804dp"
+        android:layout_height="129dp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="-4dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <Button
+            android:id="@+id/btn_private"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#00FFFFFF"
+            android:drawableTop="@drawable/ic_baseline_home_24"
+            android:text="@string/privat"
+            android:textColor="@color/black"
+            tools:layout_editor_absoluteX="502dp"
+            tools:layout_editor_absoluteY="80dp" />
+
+        <Button
+            android:id="@+id/btn_business"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#00FFFFFF"
+            android:drawableTop="@drawable/ic_baseline_business_center_24"
+            android:text="@string/business"
+            android:textColor="@color/black"
+            tools:layout_editor_absoluteX="207dp"
+            tools:layout_editor_absoluteY="80dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="798dp"
+        android:layout_height="1059dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="131dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#000000"/>
+
+        <TextView
+            android:id="@+id/tv_showbills"
+            android:layout_width="match_parent"
+            android:layout_height="900dp" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
