--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -20,7 +20,13 @@
 
     />
 
-
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="83dp"
+        android:layout_height="51dp"
+        app:srcCompat="@drawable/image"
+        tools:layout_editor_absoluteX="-9dp"
+        tools:layout_editor_absoluteY="-3dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
