--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,10 +7,10 @@
     tools:context=".Admin.Start">
 
     <LinearLayout
-        android:layout_width="804dp"
-        android:layout_height="129dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="-4dp"
+        tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="1dp">
 
         <Button
@@ -18,8 +18,8 @@
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
             android:background="#00FFFFFF"
             android:drawableTop="@drawable/ic_baseline_home_24"
             android:text="@string/privat"
@@ -32,8 +32,8 @@
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
             android:background="#00FFFFFF"
             android:drawableTop="@drawable/ic_baseline_business_center_24"
             android:text="@string/business"
@@ -43,8 +43,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="798dp"
-        android:layout_height="1059dp"
+        android:layout_width="391dp"
+        android:layout_height="568dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="131dp">
@@ -52,13 +52,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#000000"/>
+            android:background="#000000" />
 
         <TextView
             android:id="@+id/tv_showbills"
             android:layout_width="match_parent"
-            android:layout_height="900dp" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
