--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <Button
             android:id="@+id/btn_private"
@@ -25,7 +25,8 @@
             android:text="@string/privat"
             android:textColor="@color/black"
             tools:layout_editor_absoluteX="502dp"
-            tools:layout_editor_absoluteY="80dp" />
+            tools:layout_editor_absoluteY="80dp"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:id="@+id/btn_business"
@@ -39,15 +40,16 @@
             android:text="@string/business"
             android:textColor="@color/black"
             tools:layout_editor_absoluteX="207dp"
-            tools:layout_editor_absoluteY="80dp" />
+            tools:layout_editor_absoluteY="80dp"
+            style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="391dp"
         android:layout_height="568dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="131dp">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="111dp">
 
         <View
             android:layout_width="match_parent"
@@ -57,7 +59,7 @@
         <TextView
             android:id="@+id/tv_showbills"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="11dp" />
 
     </LinearLayout>
 
