--- a/app/src/main/res/layout/activity_admin_interface2.xml
+++ b/app/src/main/res/layout/activity_admin_interface2.xml
@@ -6,26 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Admin.ADMIN_INTERFACE_2">
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="390dp"
-        android:layout_height="203dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/professor_login" />
-
     <Button
         android:id="@+id/btn_Delete_User"
         android:layout_width="172dp"
         android:layout_height="63dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="280dp"
         android:text="Delete user or work"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_Change_user"
