--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -105,19 +105,21 @@
 
     <Button
         android:id="@+id/button_save_addBill"
-        android:layout_width="115dp"
-        android:layout_height="54dp"
+        android:layout_width="150dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="32dp"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="@+id/button_openCamera_addBill"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button_openCamera_addBill"
-        tools:layout_editor_absoluteX="32dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button_openCamera_addBill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="150dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="28dp"
         android:text="open Camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
