--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Admin.AddBill">
 
+
     <TextView
         android:id="@+id/tv_Title_AddBill"
         android:layout_width="wrap_content"
@@ -98,6 +99,7 @@
         android:layout_width="239dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
+        android:contentDescription="@string/tax_deprication"
         app:layout_constraintEnd_toEndOf="@+id/tv_TaxDepr_AddBill"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_TaxDepr_AddBill"
@@ -123,6 +125,44 @@
         android:text="open Camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/editText_title_AddBill"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="35dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="@+id/tv_Title_AddBill"
+        app:layout_constraintStart_toEndOf="@+id/tv_Title_AddBill"
+        app:layout_constraintTop_toTopOf="@+id/tv_Title_AddBill"
+        app:layout_constraintVertical_bias="0.38" />
+
+    <EditText
+        android:id="@+id/editText_price_AddBill3"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="@+id/editText_title_AddBill"
+        app:layout_constraintStart_toStartOf="@+id/editText_title_AddBill"
+        app:layout_constraintTop_toBottomOf="@+id/editText_title_AddBill" />
+
+    <EditText
+        android:id="@+id/editText_date_AddBill"
+        android:layout_width="280dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="150dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="@+id/editText_title_AddBill"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editText_title_AddBill"
+        app:layout_constraintTop_toBottomOf="@+id/editText_title_AddBill" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
