--- a/app/src/main/res/layout/activity_interface_work_add.xml
+++ b/app/src/main/res/layout/activity_interface_work_add.xml
@@ -8,6 +8,38 @@
     tools:layout_editor_absoluteX="16dp"
     tools:layout_editor_absoluteY="-273dp">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="Tax Deprecation"
+        app:layout_constraintBottom_toTopOf="@+id/spinner2"
+        app:layout_constraintEnd_toEndOf="@+id/spinner2"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/spinner2" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="239dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/tax_deprication"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="391dp" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="147dp"
+        android:layout_height="214dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.086"
+        app:srcCompat="@drawable/flower" />
+
     <CheckBox
         android:id="@+id/chack_Project"
         android:layout_width="100dp"
@@ -15,8 +47,10 @@
         android:text="Project"
         app:layout_constraintBottom_toBottomOf="@+id/check_Bachelor"
         app:layout_constraintEnd_toStartOf="@+id/check_Bachelor"
+        app:layout_constraintHorizontal_bias="0.398"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/check_Bachelor" />
+        app:layout_constraintTop_toTopOf="@+id/check_Bachelor"
+        app:layout_constraintVertical_bias="1.0" />
 
     <CheckBox
         android:id="@+id/check_Bachelor"
@@ -25,84 +59,61 @@
         android:text="Bachelor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.798"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09" />
-
-    <CheckBox
-        android:id="@+id/check_Master"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Master"
-        app:layout_constraintBottom_toBottomOf="@+id/check_Bachelor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/check_Bachelor"
-        app:layout_constraintTop_toTopOf="@+id/check_Bachelor" />
+        app:layout_constraintVertical_bias="0.405" />
 
     <EditText
         android:id="@+id/txt_Titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Titel"
+        android:hint="Price"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.234" />
+        app:layout_constraintVertical_bias="0.176" />
+
+    <EditText
+        android:id="@+id/txt_Titel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Title"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_Titel"
+        app:layout_constraintEnd_toEndOf="@+id/txt_Titel"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txt_Titel"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671" />
 
     <EditText
         android:id="@+id/txt_deadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Deadline"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/txt_Titel"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txt_Titel"
         app:layout_constraintTop_toBottomOf="@+id/txt_Titel" />
-
-    <EditText
-        android:id="@+id/txtExamDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Exam Date. (Master)"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/txt_deadline"
-        app:layout_constraintStart_toStartOf="@+id/txt_deadline"
-        app:layout_constraintTop_toBottomOf="@+id/txt_deadline" />
-
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="342dp"
-        android:layout_height="204dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/txtExamDate"
-        app:layout_constraintStart_toStartOf="@+id/txtExamDate"
-        app:layout_constraintTop_toBottomOf="@+id/txtExamDate"
-        app:layout_constraintVertical_bias="0.899"
-        app:srcCompat="@drawable/admin_work" />
 
     <Button
         android:id="@+id/btn_setWork"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
         android:text="Upload"
-        app:layout_constraintBottom_toTopOf="@+id/imageView12"
-        app:layout_constraintEnd_toEndOf="@+id/txtExamDate"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintStart_toStartOf="@+id/txtExamDate"
-        app:layout_constraintTop_toBottomOf="@+id/txtExamDate"
-        app:layout_constraintVertical_bias="0.777" />
+        tools:layout_editor_absoluteX="140dp"
+        tools:layout_editor_absoluteY="663dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
