--- a/app/src/main/res/layout/activity_admin_interface.xml
+++ b/app/src/main/res/layout/activity_admin_interface.xml
@@ -11,12 +11,11 @@
         android:id="@+id/interface_Add_Work"
         android:layout_width="164dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
         android:text="Abrechnung"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Image" />
+        tools:layout_editor_absoluteY="403dp" />
 
     <Button
         android:id="@+id/Abrechnung"
@@ -41,14 +40,15 @@
         app:layout_constraintTop_toBottomOf="@+id/interface_Add_Work" />
 
     <ImageView
-        android:id="@+id/Image"
-        android:layout_width="385dp"
-        android:layout_height="438dp"
-        android:layout_marginStart="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView8"
+        android:layout_width="308dp"
+        android:layout_height="351dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/interface_Add_Work"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/open" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
