--- a/app/src/main/res/layout/activity_admin_delete_user.xml
+++ b/app/src/main/res/layout/activity_admin_delete_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 
-    tools:context=".Admin.Admin_Delete_USER">
+    tools:context=".Admin.activity_admin_delete_user">
 
 
     <ScrollView
@@ -35,24 +35,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
-                android:id="@+id/btnGetAllWORKS"
+                android:id="@+id/Private_Button"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="20dp"
                 android:background="#400000"
-                android:text="Get all avalable works"
+                android:text="Private Bills"
                 android:textColor="#ffffff" />
 
             <Button
-                android:id="@+id/btn_Get_ALLUSERS"
+                android:id="@+id/Business_Button"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="20dp"
                 android:background="#400000"
-                android:text="Get all available USERS"
+                android:text="Buisness Bill"
                 android:textColor="#ffffff" />
 
         </LinearLayout>
@@ -131,7 +132,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btn_Upload_DELETE_WORK"
+                android:id="@+id/Delete_Private"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginLeft="47dp"
@@ -141,7 +142,7 @@
                 android:textColor="#ffffff" />
 
             <Button
-                android:id="@+id/btn_Upload_DELETE"
+                android:id="@+id/Delete_Business"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginLeft="47dp"
